fix: changed overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -70,8 +70,7 @@ main {
     width: calc(100% - 245px);
     padding-top: 80px;
     float: right;
-    overflow: scroll;
-    /* CONTROLLA: cambialo in hidden come finisci */
+    overflow-y: auto;
 }
 
 /* #endregion main */
